@@ -3,6 +3,10 @@ $Id$                       -*-text-*-
 
 **** 1.07 [unreleased]
 
+Fix rt.cpan.org #115558
+
+	Net::DNS::Nameserver does not allow EDNS replies
+
 Fix rt.cpan.org #114917
 
 	Net::DNS::ZoneFile fails to parse mixed case mnemonics
@@ -11,12 +15,16 @@ Fix rt.cpan.org #114876
 
 	Use of uninitialized value in lc at MSWin32.pm line 77
 
-Fix rt.cpan.org #114819
+Fix rt.cpan.org #114819 & #115482
 
 	Net::DNS fails to compile with taint checks enabled
 
 
 **** 1.06 May 27, 2016
+
+Fix rt.cpan.org #114917
+
+	Net::DNS::ZoneFile fails when unnamed RR follows $ORIGIN
 
 Fix rt.cpan.org #114351
 
